--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,11 @@
             <version>8.0.1</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+            <version>6.0.3</version>
+        </dependency>
     </dependencies>
 
 <!--    <build>-->
